--- a/capaPresentacion/frmAprobarGira.resx
+++ b/capaPresentacion/frmAprobarGira.resx
@@ -156,4 +156,29 @@
   <metadata name="Column13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAQAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAGQAAAC0AAAApAAAAGwAAACQAAAAQAAAAHwAAADsAAAAhAAAALRod
+        IE8PTmi2D1Nqtg9TarYQVGy0EkNVOQAAABUAAAAvAAAAIQAAAB4AAAAmAAAAMAAAACkAAAAnAAAAKgAA
+        ACYUOUi9AKvo/wCr6P8Aq+j/AKvo/wtym5EXKC9tEFdxvxQ9Tb8RSV2hGxcbQxFRab8UOUm2EFdxvxBX
+        cb8QVnDBB4Ku/wCr6P8Aq+j/AKvo/wCr6P8LdJuRFTxMkQCr6P8KcJT/B4Sy5hsXGXoCoNj/CXWc/wKc
+        0/8Jd6D/Ap7W/wCr6P8Aq+j/A5fM+BFJXmwFi7v/C3SbkRU8TJEAq+j/CnCU/wKf1/8GiLf/AKnl/w1g
+        f/8GiLb/Boi2/wGi3P8AqOT/AKvo/wKb0vsRTWPBBJLF/wt0m5EWLTeUB4Gu/xU8S4gNWnZjDVp2Yw1X
+        cWEVMz9VDVp2Yw1admMPWHRlCXSb7gCr6P8Aq+j/AKvo/wCr6P8LdJuREz1NTweEsd0XNEAsAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAABU7SocAq+j/AKvo/wCr6P8Aq+j/C3GYkAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiIiIPDlRtXg1YcmANWHJgDVhyYBc1RCIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
